Moving along. Next TODOs: TODO Seekbar is working. Need to display progress and duration numbers. TODO Get the Play/Pause button to display the correct symbol depending on the service is playing music or not. TODO get the NowPlaying notification bar up and running.

--- a/app/src/main/res/layout/media_player_layout.xml
+++ b/app/src/main/res/layout/media_player_layout.xml
@@ -53,11 +53,12 @@
             />
 
         <SeekBar
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
 
             android:id="@+id/seekBar"
-            android:layout_gravity="bottom" />
+            android:layout_gravity="bottom"
+            android:layout_weight="1" />
     </LinearLayout>
 
 
