--- a/app/src/main/res/layout/notification_layout_bar.xml
+++ b/app/src/main/res/layout/notification_layout_bar.xml
@@ -1,68 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_notification_layout"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:layout_weight="1"
     android:background="@color/background_material_dark">
-    <!--<LinearLayout-->
-        <!--android:id="@+id/name_and_song_notification_layout"-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content">-->
-    <!--<TextView-->
-        <!--android:id="@+id/notification_name"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="test" />-->
+    <LinearLayout
+        android:id="@+id/name_and_song_notification_layout"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <!--<TextView-->
-        <!--android:id="@+id/notification_song"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_toRightOf="@+id/notification_name"-->
-        <!--android:text="test"/>-->
-    <!--</LinearLayout>-->
-    <!--android:layout_below="@+id/name_and_song_notification_layout"-->
+
+        <TextView
+            android:id="@+id/notification_song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:text="test"/>
+
+        <TextView
+            android:id="@+id/notification_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="test"/>
+
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/notification_buttons_layout"
         android:orientation="horizontal"
 
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="75dp"
+            android:id="@+id/notification_album_img"
+            android:layout_centerInParent="true"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+             />
     <ImageButton
         android:id="@+id/notification_stop"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:src="@drawable/ic_action_stop"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:background="#ffffff"
+        android:layout_gravity="center" />
     <ImageButton
         android:id="@+id/notification_prev"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:src="@drawable/ic_action_skip_previous"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:background="#ffffff"
+        android:layout_gravity="center" />
     <ImageButton
         android:id="@+id/notification_next"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:src="@drawable/ic_action_skip_next"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:background="#ffffff"
+        android:layout_gravity="center" />
     <ImageButton
         android:id="@+id/notification_pause_play"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:src="@drawable/ic_action_pause"
-        android:layout_margin="10dp"/>
+        android:background="#ffffff"
+        android:layout_gravity="center" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
