--- a/app/src/main/res/menu/menu_artists_main.xml
+++ b/app/src/main/res/menu/menu_artists_main.xml
@@ -1,11 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".ArtistsMainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_item_share"
+        app:showAsAction="never"
+        android:title="@string/share_track"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 
 
-
-
-    />
 </menu>
