--- a/app/src/main/res/menu/menu_artists_main.xml
+++ b/app/src/main/res/menu/menu_artists_main.xml
@@ -8,8 +8,8 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/menu_item_share"
-        app:showAsAction="never"
+        android:id="@+id/action_share"
+        app:showAsAction="ifRoom"
         android:title="@string/share_track"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 
